# k-terminal

./: .gitignore  README.md  feature.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-17-embedded-terminal.md  2026-05-17-local-machine-and-logo.md  2026-05-17-local-shell-selection.md  2026-05-17-proxy-support.md
docs/superpowers/specs/: 2026-05-17-embedded-terminal-design.md  (+2 more)
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-01-01-000001_create_initial_tables/: down.sql  up.sql
src-tauri/migrations/2026-05-17-000002_add_server_proxy_fields/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: group_commands.rs  mod.rs  search_commands.rs  server_commands.rs  settings_commands.rs  ssh_commands.rs  terminal_commands.rs  terminal_session_commands.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/managers/: config_manager.rs  group_manager.rs  local_pty_manager.rs  mod.rs  search_manager.rs  server_manager.rs  ssh_manager.rs  ssh_session_manager.rs  terminal_manager.rs
src-tauri/src/security/: keyring.rs
src/hooks/: useGroups.ts  useSearch.ts  useServers.ts  useTerminal.ts  useTerminalProfiles.ts  useTerminalSession.ts
src/lib/: clipboard.ts  constants.ts  proxyResolver.ts  tauri.ts  terminalChannels.ts  types.ts
src/pages/: SettingsPage.tsx  TerminalProfilesPage.tsx
src/stores/: groupStore.ts  serverStore.ts  settingsStore.ts  terminalSessionStore.ts
src/styles/: globals.css
(+16 files in other folders)
